--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     background: #eee;
-    color: #000;
+    color: #999;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -18,8 +18,16 @@ body{
     width: 50%;
 }
 
-#caja p, h2{
-    margin: 10px;
+#caja p{
+    margin: 0 15px 10px 15px;
+    font-size: 16px;
+}
+
+#caja h2 {
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+    font-weight: bold;
+    margin: 10px 0 10px 5px;
 }
 
 .col-12{
