--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,46 @@
-body{
-    background: #eee;
-    color: #999;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#mini{
-    font-size: 20px;
-    margin: 0 0 0 20px;
-}
-
-#caja{
-    border:1px solid #000;
-    background: #fff;
-    margin: 0 auto;
-    padding: 0;
-    font-size: 20px;
-    width: 50%;
-}
-
-#caja p{
-    margin: 0 15px 10px 15px;
+body
+{
+    background: #1e1f24;
+    color: #333;
+    text-align: center;
+    font-family: Arial;
     font-size: 16px;
-}
-
-#caja h2 {
-    color: rgb(0, 0, 0);
-    font-size: 25px;
-    font-weight: bold;
-    margin: 10px 0 10px 5px;
-}
-
-.col-12{
     margin: 0;
     padding: 0;
 }
 
-#caja h1{
+#cabecera
+{
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
     font-weight: bold;
-    font-size: 30px;
-    background: #33a;
     margin: 0;
-    padding: 10px;
-    color: #fff;
-    box-shadow: 0px 4px 4px 0px rgb(0, 0, 0);
+    padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
